--- a/views/index.html
+++ b/views/index.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Request Header Parser</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico"
+      type="image/x-icon"
+    />
 
-   <head>
-      <title>Request Header Parser</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-   <body>
-      <div class="container">
-        <h2>Request Header Parser Microservice</h2>
-
-        <h3>Example Usage:</h3>
+  <body>
+    <div class="container has-text-centered">
+      <h1 class="title navbar-item is-justify-content-center">
+        Request Header Parser Microservice
+      </h1>
+      <hr />
+      <div class="block">
+        <img src="request.png" alt="request" style="width: 200px" />
+      </div>
+      <div class="block">
+        <h3 class="subtitle">Example Usage:</h3>
         <p>
           <a href="api/whoami">[base url]/api/whoami</a>
         </p>
+      </div>
 
-        <h3>Example Output:</h3>
+      <div class="block">
+        <h3 class="subtitle">Example Output:</h3>
         <p>
-          <code>{"ipaddress":"::ffff:159.20.14.100","language":"en-US,en;q=0.5",<br>"software":"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0"}</code>
+          <code
+            >{"ipaddress":"::ffff:159.20.14.100","language":"en-US,en;q=0.5",<br />"software":"Mozilla/5.0
+            (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101
+            Firefox/50.0"}</code
+          >
         </p>
       </div>
+
       <div class="footer">
-        <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
-        </p>
+        <p>By <a href="https://github.com/camilojimenezj">Camilo Jimenez</a></p>
       </div>
-   </body>
-
-
+    </div>
+  </body>
 </html>
