--- a/views/index.html
+++ b/views/index.html
@@ -6,11 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="request.png" type="image/x-icon" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
